订单金额结算

--- a/WebContent/crm/filedown_list.html
+++ b/WebContent/crm/filedown_list.html
@@ -242,6 +242,8 @@
                             heml_name = "订单档案";
                         } else if (heml_name == "SPXSDA") {
                             heml_name = "商品销售档案"
+                        }else if (heml_name == "DDJEJS") {
+                            heml_name = "订单金额结算"
                         }
 
                         var url = dataresult[i].url;
