--- a/WebContent/crm/dynamicData_storeprofit_analysis.html
+++ b/WebContent/crm/dynamicData_storeprofit_analysis.html
@@ -178,7 +178,7 @@
                               <font id="forcolumnattention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:17px">销售收入-已退货-营销费用-报损盘亏</font>整体毛利</th>
                           <th width="8%">优易补贴<br/></th>
                           <th width="8%"><font id="columnattention2" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
-                              <font id="forcolumnattention2" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:17px">（销售收入-已退货-营销费用-报损盘亏）×0.8</font>门店毛利</th>
+                              <font id="forcolumnattention2" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:17px">（整体毛利+优易补贴）×0.8</font>门店毛利</th>
 	                    </tr>
                     </tbody>
                   </table>
