修复日期重置

--- a/WebContent/crm/dynamicData_profit_analysis.html
+++ b/WebContent/crm/dynamicData_profit_analysis.html
@@ -1913,7 +1913,7 @@
         firstDate.setTime(firstDate.getTime()-24*60*60*1000);
         var bdate = firstDate.format('yyyy/MM/dd');
         var cDate = firstDate.format('yyyy/MM/dd');
-        $("#auto_date_store").val(bdate+" - "+cDate);
+        $("#auto_date_dept").val(bdate+" - "+cDate);
 
     }
 
