修改商品排行榜详情页面js

--- a/WebContent/crm/ranking.html
+++ b/WebContent/crm/ranking.html
@@ -119,6 +119,7 @@
         <input id="pages" type="hidden">
         <input id="current" type="hidden">
         <input id="keyup" type="hidden">
+        <input id="selectChange" type="hidden">
           <thead>
           <tr class="ranking_h">
             <th style="width:20%">排名</th>
