--- a/WebContent/crm/ranking.html
+++ b/WebContent/crm/ranking.html
@@ -56,7 +56,8 @@
     .pagination>.disabled>a, .pagination>.disabled>a:focus, .pagination>.disabled>a:hover, .pagination>.disabled>span, .pagination>.disabled>span:focus, .pagination>.disabled>span:hover{background-color: transparent;border-color:transparent; color: #ccc;}
     .pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover{color: rgba(238,55,51,1); font-weight: bold; background-color: transparent;border-color:transparent;}
     .dataTables_filter input,.dataTables_length select{background-color: transparent;}
-        div.dataTables_length select {width: 75px;display: inline-block;}
+    .dataTables_filter .fa{padding-left: 10px; font-size: 18px;}
+    div.dataTables_length select {width: 75px;display: inline-block;}
     div.dataTables_filter input {margin-left: 0.5em;display: inline-block;width: auto;}
     div.dataTables_filter label {font-weight: normal;white-space: nowrap;float: right;}
     
@@ -108,7 +109,9 @@
           </div>
           <div class="col-sm-6">
             <div class="dataTables_filter">
-              <label>搜索:<input type="search" id="search_store" class="form-control input-sm" placeholder="商品名称" aria-controls="example1"></label>
+               <label>
+                <input type="search" id="search_store" class="form-control input-sm" placeholder="商品名称" aria-controls="example1"><a href="#" class="fa fa-search" id="search_store_a"></a>
+              </label>
             </div>
           </div>
         </div>
