事业群交叉毛利

--- a/WebContent/crm/dynamicData_profit_analysis.html
+++ b/WebContent/crm/dynamicData_profit_analysis.html
@@ -377,7 +377,7 @@
 												<th width="8%">事业群</th>
 												<th width="8%" id="channelnamepayhide2">频道</th>
 												<th width="10%"><font id="attentiondept" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
-													<font id="showattentiondept" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:170px">销售收入-已退货-营销费用</font>整体毛利</th>
+													<font id="showattentiondept" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:170px">交叉毛利（销售收入-营销费用）-退货交叉毛利</font>整体毛利</th>
 												<th width="8%">补贴费用<br/></th>
 												<th width="8%"><font id="attentiondept2" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
 													<font id="showattentiondept2" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:50px">整体毛利×0.2-补贴费用×0.8</font>事业群毛利</th>
