--- a/WebContent/crm/ranking.html
+++ b/WebContent/crm/ranking.html
@@ -30,8 +30,12 @@
 
     .content-wrapper{color: #666;}
     .table{margin-top: 10px;}
-    .ranking_h{background: url("dist/img/ranking-h.png") no-repeat; background-size: 100% 100%;}
-    table th{padding-top: 18px; color: #fff;height: 60px; line-height: 60px;}
+        /*.ranking_h{background: url("dist/img/ranking-h.png") no-repeat; background-size: 100% 100%;}*/
+    table tr th{padding-top: 0px!important; color: #fff;height: 60px; line-height: 60px;background: url("dist/img/ranking-h.png") no-repeat;}
+    table tr th:nth-child(1){background-position: left;}
+    table tr th:nth-child(2),table tr th:nth-child(3),table tr th:nth-child(4){background-position: center;}
+    table tr th:nth-child(5){background-position: right;}
+
     table td{height: 40px; line-height: 40px!important;background: linear-gradient(top, rgba(255,255,255,0.6), rgba(255,255,255,0.4)); background: -webkit-linear-gradient(top, rgba(255,255,255,0.6), rgba(255,255,255,0.4)); background:-moz-linear-gradient(top, rgba(255,255,255,0.6), rgba(255,255,255,0.4)); white-space:nowrap; text-overflow:ellipsis; -o-text-overflow:ellipsis; overflow:hidden; position: relative; color: #444;}
     table .text_up{color: #da3d46;}
     table .text_down{color: #827f92;}
