--- a/WebContent/crm/dynamicData_deptprofit_analysis.html
+++ b/WebContent/crm/dynamicData_deptprofit_analysis.html
@@ -124,7 +124,17 @@
          	<div class="box-header h4 text-light-blue">
           	<div class="pull-left "><strong>事业群毛利</strong></div>
          	<div class="pull-left text-red" style="padding-left:15px;font-size:75%">数据口径：</div>
-                <div class="pull-left text-red" style="font-size:75%">1.本月数据截止到昨天24点。</br>2.营销费用不包含A类营销费用。</br>3.毛利=销售收入（平台+优易）-已退货（已签收并退款）-营销费用（平台分摊的优惠券）-报损-盘亏。</br>4.事业群报损、盘亏数据为0。</div>
+                <div class="pull-left text-red" style="font-size:75%;position: relative;">1.本月数据截止到昨天24点。</br>2.营销费用不包含A类营销费用。</br>3.整体毛利=交叉毛利（销售收入-营销费用）-已退货交叉毛利-报损-盘亏。</br>4.事业群报损、盘亏数据为0。</br>5.<a onmouseover="showrule();" onmouseout="hiderule()">交叉毛利规则。</a>
+                <div class="moveHide" style="position: absolute;display: none;z-index:100;background:#D3D3D3;">
+                    内部交叉业务规则</br>
+                    第一条 各业务在核算利润时均需按照《国安社区绩效考核核算规则》进行，内部交叉业务计价涉及频道为 金融、家务事、养老餐、及产品管理中心相应频道。优易各频道不在交叉业务计价范围内。</br>
+                    第二条 交叉业务计价原则</br>
+                    1.原则：同一用户同一门店购买行为</br>
+                    按照首单原则给客户进行标签定义，即客户首次购买产品时打上所对应频道标签，确定客户归属频道，客户后期同一门店购买其他频道产品时，所产生毛利额的20%计入客户标签归属频道。</br>
+                    举例：</br>
+                    用户在国安社区A门店首单购买养老餐产品，即客户归属为A门店养老餐产品用户，并打上A门店养老餐标签。此客户再次在B门店购买教育产品，即客户归属为B门店教育产品客户，如此客户再次在A门店购买旅游产品时，旅游产品所产生的毛利20%计入养老餐业务绩效；如此用户再次在B门店购买家务事产品，家务事产品所产生的毛利20%计入教育业务绩效。
+                </div>
+                </div>
           </div>
           <div class="box-body">
             <form id="searchform">
@@ -193,10 +203,8 @@
 	                      <th width="10%" id="storenopayhide">门店编号</th>
                           <th width="8%">事业群</th>
                           <th width="8%" id="channelnamepayhide">频道</th>
-	                      <th width="8%">销售收入<br/>（平台）</th>
-                          <th width="10%">销售收入<br/>（优易-进销存系统商品）</th>
-                          <th width="7%">已退货<br/></th>
-                          <th width="8%">营销费用<br/></th>
+	                      <th width="8%">销售毛利</th>
+                          <th width="10%">已退货销售毛利</th>
                           <th width="8%"><font id="columnattention" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
                               <font id="forcolumnattention" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:50px">交叉毛利（销售收入-营销费用）-退货交叉毛利</font>整体毛利</th>
                           <th width="8%">补贴费用<br/></th>
@@ -685,10 +693,9 @@
                        var real_profit = (jData[i].sale_profit -jData[i].return_sale_profit).toFixed(2);
                        var real_subsidy =  (jData[i].gayy_subsidy -jData[i].return_gayy_subsidy).toFixed(2);
                        var dept_profit = (real_profit * 0.2 - real_subsidy * 0.8).toFixed(2);
-                           infoStr = infoStr+"<td>"+jData[i].platform_profit+"</td>"
-                           +"<td>"+jData[i].ims_profit+"</td>"
-                           +"<td>"+jData[i].return_profit+"</td>"
-                           +"<td>"+jData[i].order_fee+"</td>"
+                           infoStr = infoStr
+                           +"<td>"+jData[i].sale_profit+"</td>"
+                           +"<td>"+jData[i].return_sale_profit+"</td>"
                            +"<td>"+real_profit+"</td>"
                            +"<td>"+real_subsidy+"</td>"
                            +"<td>"+dept_profit+"</td>"
@@ -863,6 +870,14 @@
     	 $("#process_div_pic").hide();
       });
     }
+
+//交叉毛利规则信息显示
+function showrule(){
+    $(".moveHide").show();
+}
+function hiderule() {
+    $(".moveHide").hide();
+}
 
 function initalldept(){
     doManager("chartStatManager","queryAllDept",null,
