--- a/WebContent/crm/ranking.html
+++ b/WebContent/crm/ranking.html
@@ -132,7 +132,7 @@
             <th style="width:20%">排名</th>
             <th style="width:30%">商品名称</th>
             <th style="width:20%">门店名称</th>
-            <th style="width:10%">GMV</th>
+            <th style="width:10%">销量</th>
             <th style="width:20%">趋势</th>
           </tr>
           </thead>
