订单档案a标签css样式优化

--- a/WebContent/crm/dynamicData_profit_analysis.html
+++ b/WebContent/crm/dynamicData_profit_analysis.html
@@ -166,7 +166,7 @@
 					</ul>
 					<div class="tab-content">
 						<div class="col-sm-12 text-red no-padding" style="padding-left:15px;font-size:75%;float: right">
-							<div style="width:auto;float:right" style="font-size:75%;position: relative;">数据口径：</br>1.营销费用不包含A类营销费用。</br>2.优易促销产生的负毛利不计入门店毛利。</br>3.业务单位毛利均基于 <a style="border-bottom:1px dashed #0000ff;" onmouseover="showrule();" onmouseout="hiderule()">交叉销售规则</a> 计算。</br>4.此页面数据为运营监控数据，不可作为绩效数据使用。
+							<div style="width:auto;float:right" style="font-size:75%;position: relative;">数据口径：</br>1.营销费用不包含A类营销费用。</br>2.优易促销产生的负毛利不计入门店毛利。</br>3.业务单位毛利均基于 <a style="border-bottom:1px dashed #0000ff;cursor:default;" onmouseover="showrule();" onmouseout="hiderule()">交叉销售规则</a> 计算。</br>4.此页面数据为运营监控数据，不可作为绩效数据使用。
                                 <div class="moveHide" style="position: absolute;display: none;z-index:100;background:#D3D3D3;">
                                     内部交叉业务规则</br>
                                     第一条 各业务在核算利润时均需按照《国安社区绩效考核核算规则》进行，内部交叉业务计价涉及频道为 金融、家务事、养老餐、及产品管理中心相应频道。优易各频道不在交叉业务计价范围内。</br>
