--- a/WebContent/crm/dynamicData_deptprofit_analysis.html
+++ b/WebContent/crm/dynamicData_deptprofit_analysis.html
@@ -124,7 +124,7 @@
          	<div class="box-header h4 text-light-blue">
           	<div class="pull-left "><strong>事业群毛利</strong></div>
          	<div class="pull-left text-red" style="padding-left:15px;font-size:75%">数据口径：</div>
-                <div class="pull-left text-red" style="font-size:75%;position: relative;">1.本月数据截止到昨天24点。</br>2.营销费用不包含A类营销费用。</br>3.整体毛利=销售毛利（销售收入-营销费用）-已退货销售毛利-报损-盘亏。</br>4.事业群报损、盘亏数据为0。</br>5.本页面毛利均基于 <a style="border-bottom:1px dashed #0000ff;" onmouseover="showrule();" onmouseout="hiderule()">交叉销售规则</a> 计算。
+                <div class="pull-left text-red" style="font-size:75%;position: relative;">1.本月数据截止到昨天24点。</br>2.营销费用不包含A类营销费用。</br>3.整体毛利=销售毛利（销售收入-营销费用）-已退货销售毛利-报损-盘亏。</br>4.事业群报损、盘亏数据为0。</br>5.本页面毛利均基于 <a style="border-bottom:1px dashed #0000ff;cursor:default;" onmouseover="showrule();" onmouseout="hiderule()">交叉销售规则</a> 计算。
                 <div class="moveHide" style="position: absolute;display: none;z-index:100;background:#D3D3D3;">
                     内部交叉业务规则</br>
                     第一条 各业务在核算利润时均需按照《国安社区绩效考核核算规则》进行，内部交叉业务计价涉及频道为 金融、家务事、养老餐、及产品管理中心相应频道。优易各频道不在交叉业务计价范围内。</br>
