--- a/WebContent/crm/target_entry_list_edit.html
+++ b/WebContent/crm/target_entry_list_edit.html
@@ -415,7 +415,7 @@
 			<span style="position: absolute;left: 270px;color: #eee826;margin-right: 30%">3、请确认导入数据的月份、事业群与页面相同。</span>
 		</div>
 		<span class="but" style="position: relative;top: -35px;">
-			<button name="file" style="height: 38px;display: block" class="btn btn-outline btn-default" id="fileNum" onclick="showFileNum()">指标统计</button>
+			<button name="file" style="height: 38px;display: block;float: left;margin-right: 5px;" class="btn btn-outline btn-default" id="fileNum" onclick="showFileNum()">指标统计</button>
 			<button name="file" style="height: 38px" class="btn btn-outline btn-default" id="file" onclick="showFile()">导入数据</button>
 			<button name="download" style="height: 38px" class="btn btn-outline btn-default" onclick="download();">导出数据</button>
             </span>
